<resources>
    <string name="app_name">PtyxiakiLauncher</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="amka">AMKA</string>
    <string name="afm">AFM</string>
    <string name="sosName" translatable="false">SOS Name</string>
    <string name="sosPhone" translatable="false">SOS Phone</string>
    <string name="activityInfoTitle" translatable="false">Info</string>
    <string name="activityInfoEditTitle" translatable="false">Info Edit</string>
    <string name="fastmessage_title">Title</string>
    <string name="fastmessage_content">Content</string>
    <string name="fastmessage_addmessage">Add Message</string>
    <string name="fastcontacts_addnewcontact">Add Contact</string>
    <string name="fastcontacts_selectedcontact">Selected Contact</string>
    <string name="fastmessage_update">Update</string>
    <string name="sos_contacts">SOS Contacts</string>
    <string name="fast_call_number">Fast Call Number</string>
    <string name="launcher_settings">Launcher Settings</string>
    <string name="dial">Dial</string>
    <string name="contacts">Contacts</string>
    <string name="message">Message</string>
    <string name="info">Info</string>
    <string name="browser">Browser</string>
    <string name="chat_app">Chat App</string>
    <string name="fast_call">Fast Call</string>
    <string name="sos">SOS</string>
    <string name="all_apps">More Apps</string>
    <string name="settings">Settings</string>
    <string name="dial_tooltip">Opens dial app</string>
    <string name="contacts_tooltip">Opens contact app</string>
    <string name="message_tooltip">Opens message app</string>
    <string name="browser_tooltip">Opens browser app</string>
    <string name="chatapp_tooltip">chatapp_tooltip</string>
    <string name="sos_tooltip">Sends sos message</string>
    <string name="allapps_tooltip">View More apps</string>
    <string name="settings_tooltip">Opens settings app</string>
    <string name="fast_call_tooltip">Makes a fast call</string>
    <string name="info_tooltip">info_tooltip</string>

</resources>